Feat: Add News Layout

--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -1,8 +1,10 @@
 .footer {
   width: 100%;
-  background-color: #f5f5f5;
+  background-color: #1f2120;
   padding: 20px;
   text-align: center;
-  font-size: 18px;
+  color: #dfe6e2;
+  font-size: 16px;
+  letter-spacing: 0.3px;
   margin-top: auto;
 }
