--- a/src/components/News/News.module.scss
+++ b/src/components/News/News.module.scss
@@ -3,3 +3,11 @@
   max-width: 1100px;
   margin: auto;
 }
+
+// Grid
+.news {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-gap: 30px;
+  margin-top: 20px;
+}
