Add Loader and Handle Invalid Cases

--- a/src/components/NewsDetail/NewsDetail.module.scss
+++ b/src/components/NewsDetail/NewsDetail.module.scss
@@ -20,6 +20,12 @@
     box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
   }
 
+  .error {
+    font-weight: 600;
+    font-size: 25px;
+    text-align: center;
+  }
+
   .title {
     font-size: 16px;
     display: -webkit-box;
