--- a/src/components/News/News.module.scss
+++ b/src/components/News/News.module.scss
@@ -2,6 +2,12 @@
   width: 1100px;
   max-width: 1100px;
   margin: auto;
+
+  .error {
+    font-weight: 600;
+    font-size: 25px;
+    text-align: center;
+  }
 }
 
 // Grid
