--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -1,10 +1,22 @@
 .footer {
   width: 100%;
   background-color: #1f2120;
-  padding: 20px;
+  padding: 20px 30px;
   text-align: center;
   color: #dfe6e2;
   font-size: 16px;
   letter-spacing: 0.3px;
   margin-top: auto;
+
+  .footer_wrapper {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    // margin-left: 38%;
+  }
+
+  img {
+    width: 35px;
+    height: 35px;
+  }
 }
