--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -1,7 +1,7 @@
 .footer {
   width: 100%;
   background-color: #1f2120;
-  padding: 20px 30px;
+  padding: 20px 60px;
   text-align: center;
   color: #dfe6e2;
   font-size: 16px;
@@ -12,7 +12,16 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    // margin-left: 38%;
+
+    > div {
+      flex: 1;
+    }
+    :first-child {
+      text-align: left;
+    }
+    :last-child {
+      text-align: right;
+    }
   }
 
   img {
