--- a/src/components/News/News.module.scss
+++ b/src/components/News/News.module.scss
@@ -1,5 +1,4 @@
 .container {
-  width: 1100px;
   max-width: 1100px;
   margin: auto;
 
@@ -13,7 +12,8 @@
 // Grid
 .news {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(325px, 1fr));
+  grid-template-rows: 1fr;
   grid-gap: 30px;
   margin-top: 20px;
 }
